--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" type="image/svg+xml" href="/app_icon.svg">
+        <meta name="color-scheme" content="light only">
+        <meta name="supported-color-schemes" content="light">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>햇살마을</title>
     </head>
